// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsScreen matches snapshot — dark 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#000",
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingBottom": 100,
      }
    }
    contentInsetAdjustmentBehavior="automatic"
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <Text
        style={
          [
            {
              "fontSize": 13,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "paddingBottom": 6,
              "paddingHorizontal": 32,
              "paddingTop": 20,
              "textTransform": "uppercase",
            },
            {
              "color": "rgba(235,235,245,0.6)",
            },
          ]
        }
      >
        APPEARANCE
      </Text>
      <View
        style={
          {
            "gap": 10,
            "marginHorizontal": 16,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#1C1C1E",
              "borderColor": "transparent",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 1,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#6E55FF",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              Iris
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(235,235,245,0.6)",
                  },
                ]
              }
            >
              A confident violet
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderColor": "rgba(235,235,245,0.6)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#1C1C1E",
              "borderColor": "transparent",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 1,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#007AFF",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              Classic
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(235,235,245,0.6)",
                  },
                ]
              }
            >
              iOS system blue
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderColor": "rgba(235,235,245,0.6)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#1C1C1E",
              "borderColor": "#FF6B5C",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 6,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#FF6B5C",
              "shadowOffset": {
                "height": 8,
                "width": 0,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 22,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#FF6B5C",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              Coral
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(235,235,245,0.6)",
                  },
                ]
              }
            >
              Warm & energetic
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "backgroundColor": "#FF6B5C",
                  "borderColor": "#FF6B5C",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#fff",
                    "fontSize": 12,
                  },
                  undefined,
                  {
                    "fontFamily": "FontAwesome",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#1C1C1E",
              "borderColor": "transparent",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 1,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#00B894",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              Mint
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(235,235,245,0.6)",
                  },
                ]
              }
            >
              Fresh & clean
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderColor": "rgba(235,235,245,0.6)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#1C1C1E",
              "borderColor": "transparent",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 1,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#f5f5f7",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              Mono
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(235,235,245,0.6)",
                  },
                ]
              }
            >
              Crisp white for dark mode
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderColor": "rgba(235,235,245,0.6)",
                },
              ]
            }
          />
        </View>
      </View>
      <Text
        style={
          [
            {
              "fontSize": 13,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "paddingBottom": 6,
              "paddingHorizontal": 32,
              "paddingTop": 20,
              "textTransform": "uppercase",
            },
            {
              "color": "rgba(235,235,245,0.6)",
            },
          ]
        }
      >
        ABOUT
      </Text>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "marginHorizontal": 16,
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#1C1C1E",
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "opacity": 1,
              "paddingHorizontal": 16,
            }
          }
          testID="how-it-works-row"
        >
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontSize": 17,
                  "letterSpacing": -0.4,
                },
                {
                  "color": "#FFFFFF",
                },
              ]
            }
          >
            How It Works
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "rgba(235,235,245,0.3)",
                    "fontSize": 13,
                  },
                  undefined,
                  {
                    "fontFamily": "FontAwesome",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
          <View
            style={
              [
                {
                  "bottom": 0,
                  "height": 0.5,
                  "left": 16,
                  "position": "absolute",
                  "right": 0,
                },
                {
                  "backgroundColor": "rgba(84,84,88,0.5)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "opacity": 1,
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontSize": 17,
                  "letterSpacing": -0.4,
                },
                {
                  "color": "#FFFFFF",
                },
              ]
            }
          >
            Send Feedback
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "rgba(235,235,245,0.3)",
                    "fontSize": 13,
                  },
                  undefined,
                  {
                    "fontFamily": "FontAwesome",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
          <View
            style={
              [
                {
                  "bottom": 0,
                  "height": 0.5,
                  "left": 16,
                  "position": "absolute",
                  "right": 0,
                },
                {
                  "backgroundColor": "rgba(84,84,88,0.5)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "opacity": 1,
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontSize": 17,
                  "letterSpacing": -0.4,
                },
                {
                  "color": "#FFFFFF",
                },
              ]
            }
          >
            Version
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 17,
                    "marginRight": 6,
                  },
                  {
                    "color": "rgba(235,235,245,0.6)",
                  },
                ]
              }
            >
              1.1.10
            </Text>
          </View>
        </View>
      </View>
      <Text
        style={
          [
            {
              "fontSize": 13,
              "lineHeight": 18,
              "paddingBottom": 24,
              "paddingHorizontal": 32,
              "paddingTop": 8,
              "textAlign": "center",
            },
            {
              "color": "rgba(235,235,245,0.6)",
            },
          ]
        }
      >
        PasteClean keeps your formatting intact when pasting into Gmail. We strip dark-mode and inline styles that Gmail would render as invisible white-on-white.
      </Text>
    </View>
  </RCTScrollView>
</View>
`;

exports[`SettingsScreen matches snapshot — light 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#f2f2f7",
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingBottom": 100,
      }
    }
    contentInsetAdjustmentBehavior="automatic"
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <Text
        style={
          [
            {
              "fontSize": 13,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "paddingBottom": 6,
              "paddingHorizontal": 32,
              "paddingTop": 20,
              "textTransform": "uppercase",
            },
            {
              "color": "rgba(60,60,67,0.6)",
            },
          ]
        }
      >
        APPEARANCE
      </Text>
      <View
        style={
          {
            "gap": 10,
            "marginHorizontal": 16,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "transparent",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 1,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#6E55FF",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#1C1C1E",
                  },
                ]
              }
            >
              Iris
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(60,60,67,0.6)",
                  },
                ]
              }
            >
              A confident violet
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderColor": "rgba(60,60,67,0.6)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "transparent",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 1,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#007AFF",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#1C1C1E",
                  },
                ]
              }
            >
              Classic
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(60,60,67,0.6)",
                  },
                ]
              }
            >
              iOS system blue
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderColor": "rgba(60,60,67,0.6)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "#FF6B5C",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 6,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#FF6B5C",
              "shadowOffset": {
                "height": 8,
                "width": 0,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 22,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#FF6B5C",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#1C1C1E",
                  },
                ]
              }
            >
              Coral
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(60,60,67,0.6)",
                  },
                ]
              }
            >
              Warm & energetic
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "backgroundColor": "#FF6B5C",
                  "borderColor": "#FF6B5C",
                },
              ]
            }
          >
            <Text />
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "transparent",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 1,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#00B894",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#1C1C1E",
                  },
                ]
              }
            >
              Mint
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(60,60,67,0.6)",
                  },
                ]
              }
            >
              Fresh & clean
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderColor": "rgba(60,60,67,0.6)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "transparent",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 1,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#1c1c1e",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#1C1C1E",
                  },
                ]
              }
            >
              Mono
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(60,60,67,0.6)",
                  },
                ]
              }
            >
              Adapts to your theme
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderColor": "rgba(60,60,67,0.6)",
                },
              ]
            }
          />
        </View>
      </View>
      <Text
        style={
          [
            {
              "fontSize": 13,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "paddingBottom": 6,
              "paddingHorizontal": 32,
              "paddingTop": 20,
              "textTransform": "uppercase",
            },
            {
              "color": "rgba(60,60,67,0.6)",
            },
          ]
        }
      >
        ABOUT
      </Text>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "marginHorizontal": 16,
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "opacity": 1,
              "paddingHorizontal": 16,
            }
          }
          testID="how-it-works-row"
        >
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontSize": 17,
                  "letterSpacing": -0.4,
                },
                {
                  "color": "#1C1C1E",
                },
              ]
            }
          >
            How It Works
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text />
          </View>
          <View
            style={
              [
                {
                  "bottom": 0,
                  "height": 0.5,
                  "left": 16,
                  "position": "absolute",
                  "right": 0,
                },
                {
                  "backgroundColor": "rgba(60,60,67,0.18)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "opacity": 1,
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontSize": 17,
                  "letterSpacing": -0.4,
                },
                {
                  "color": "#1C1C1E",
                },
              ]
            }
          >
            Send Feedback
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text />
          </View>
          <View
            style={
              [
                {
                  "bottom": 0,
                  "height": 0.5,
                  "left": 16,
                  "position": "absolute",
                  "right": 0,
                },
                {
                  "backgroundColor": "rgba(60,60,67,0.18)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "opacity": 1,
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontSize": 17,
                  "letterSpacing": -0.4,
                },
                {
                  "color": "#1C1C1E",
                },
              ]
            }
          >
            Version
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 17,
                    "marginRight": 6,
                  },
                  {
                    "color": "rgba(60,60,67,0.6)",
                  },
                ]
              }
            >
              1.1.10
            </Text>
          </View>
        </View>
      </View>
      <Text
        style={
          [
            {
              "fontSize": 13,
              "lineHeight": 18,
              "paddingBottom": 24,
              "paddingHorizontal": 32,
              "paddingTop": 8,
              "textAlign": "center",
            },
            {
              "color": "rgba(60,60,67,0.6)",
            },
          ]
        }
      >
        PasteClean keeps your formatting intact when pasting into Gmail. We strip dark-mode and inline styles that Gmail would render as invisible white-on-white.
      </Text>
    </View>
  </RCTScrollView>
</View>
`;
